--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
       
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
-          <a href="/posts/%E5%BC%80%E5%8D%9A%E5%A4%A7%E5%90%89/" class="color-inherit dim link">
+          <a href="/posts/%E5%8D%9A%E5%AE%A2/" class="color-inherit dim link">
             开博大吉
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          github pages 预览博客 将本地文件上传至github
+           github pages 预览博客  将public文件上传到github，用户名.github.io 打开 用户名.github.io 找到设置  在设置中找到github pages，下方链接可预览   
         </div>
-          <a href="/posts/%E5%BC%80%E5%8D%9A%E5%A4%A7%E5%90%89/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+          <a href="/posts/%E5%8D%9A%E5%AE%A2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
       </div>
     </div>
